# Auto-slopp

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTO_UPDATE_REBOOT_ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  Description  Dockerfile  FLAKE8_VIOLATIONS.md  IMPLEMENTATION_TRACKER.md  LICENSE  LOGGING_AUDIT_REPORT.md  LOGGING_SYSTEM_DOCUMENTATION.md  Makefile  PLANNER_4DIGIT_TEST_RESULTS.md  README.md  REPOSITORY_CLEANUP_ARCHITECTURE.md  RESEARCH_REPOSITORY_STRUCTURE.md  UNUSED_FUNCTIONS.md  UNUSED_VARIABLES.md  branch-setup.md  config.sh  config.yaml  config_renaming_analysis.md  coverage.json  coverage_gaps.txt  coverage_output.txt  echo_inventory.md  enhanced_logging_documentation.md  logging_analysis.md  logging_analysis_report.md  main.sh  merge_conflict_escalation_strategy.md  numbering_algorithm_analysis.md  opencode.json  pylint_output.txt  pyproject.toml  (+11 more)
.beads/: beads.db-shm  beads.db-wal  config.yaml  issues.jsonl  last-touched
.beads.bak/: .gitignore
.beads/export-state/: 88684edbe6ec1ea0.json  cd7b4a06314a4031.json
.github/: renovate.json
.github/workflows/: ci.yml  cleanup-tracker.yml  debug.yml  lint.yml  renovate.yml  test.yml
auto_slopp/: cli.py  discovery.py  main.py  processor.py  settings.py  telegram_handler.py  worker.py
auto_slopp/utils/: file_operations.py  git_operations.py
auto_slopp/workers/: renovate_test_worker.py  stale_branch_cleanup_worker.py  task_processor_worker.py
charts/auto-slopp/: Chart.yaml  values.yaml
charts/auto-slopp/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml  serviceaccount.yaml
config/: hands-off-mode.md  hands-off-mode.sh
docs/: CONFIGURATION.md  MERGE_TESTING.md  NON_INTERACTIVE_MODE.md  README.md  TELEGRAM_LOGGING_GUIDE.md  TELEGRAM_QUICK_START.md  TESTING.md  api-reference.md  architecture.md  auto-update-reboot-architecture.md  auto-update-reboot-configuration-guide.md  auto-update-reboot-implementation-guide.md  beads_updater_integration.md  branch-cleanup-usage-guide.md  contributing.md  development-guide.md  enhanced-telegram-formatter.md  enhanced_logging.md  integration-testing-guide.md  integration-testing-summary.md  issue-280-audit.md  logging-best-practices.md  logging-examples.md  logging-troubleshooting.md  openproject.json  openproject_cli_requirements.md  openproject_worker_design.md  openproject_worker_specification.md  script_architecture_design.md  telegram-bot-api-integration.md  telegram-configuration-system.md  telegram-integration-summary.md  telegram-logging.md  testing.md  unique-number-tracking-system-design.md  vikunja_worker_verification_step10.md  vikunja_worker_verification_step11.md  vikunja_worker_verification_step12.md  vikunja_worker_verification_step13.md  vikunja_worker_verification_step14.md  (+4 more)
examples/: renovate_test_worker_example.py  task_processor_worker_example.py
githooks/: pre-commit  pre-push
my_test_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/: .gitignore  config.yaml  main.py  pyproject.toml  pyproject.toml.backup
python/auto_slopp/config/: __init__.py
python/auto_slopp/core/: merge_conflict.py  number_manager.py
python/auto_slopp/logging/: __init__.py  system_integration.py
python/auto_slopp/telegram/: __init__.py
reports/: duplicate_code.xml  duplicate_code_report.txt  pylint_duplicate.txt  symilar_output.txt
scripts/: README.md  auto-update-reboot.sh  beads_updater.sh  branch-analysis-core.sh  branch_protection.sh  cleanup-automation-engine.sh  cleanup-branches-enhanced.sh  cleanup-branches.sh  common.sh  config.yaml  creator.sh  deploy-setup.sh  docker-deploy.sh  file_numbering.sh  implementer.sh  install-service.sh  number_manager.sh  planner.sh  planner_enhanced_demo.sh  quick-setup.sh  repository-discovery.sh  task-status-detection.sh  test-dry-run-confirmation.sh  test_merge_error_handling.sh  update_fixer.sh  updater.sh  utils.sh  validate-auto-update-reboot-config.sh  verify-deployment.sh  verify-env.sh  yaml_config.sh
scripts/core/: configuration_validator.sh  error_recovery.sh  system_state.sh  telegram_config.sh  telegram_health.sh  telegram_logger.sh  telegram_queue.sh  telegram_security.sh
src/auto_slopp/: __init__.py  discovery.py  distributions.py  example_workers.py  executor.py  hooks.py  httpx.py  main.py  nodeenv.py  plugin_manager.py  pre_commit.py  task_processor.py  telegram_handler.py  test_workers.py  worker.py  yaml_utils.py
src/auto_slopp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/auto_slopp/base/: __init__.py  openagent_worker.py  opencode_worker.py
src/auto_slopp/plugins/: __init__.py  (+1 more)
src/identify/: __init__.py  cli.py
src/openproject/: __init__.py
src/pre_commit/: __init__.py
src/settings/: main.py
tests/: MERGE_CONFLICT_TEST_SCENARIOS.md  README.md  conftest.py  run_all_tests.sh  run_integration_tests.sh  test_atomic_operations.sh  test_auto-update-reboot.sh  test_auto_update.py  test_backport_worker.py  test_backup_creation.sh  test_backup_integrity.sh  test_backup_rotation.sh  test_basic_number_uniqueness.sh  test_beads_updater.sh  test_branch_analysis.py  test_branch_analysis_core.sh  test_branch_protection.sh  test_cleanup_automation_integration.sh  test_cleanup_branches_comprehensive.sh  test_cli.py  test_cli_executor.py  test_comprehensive_number_uniqueness.sh  test_comprehensive_suite.sh  test_concurrent_stress.sh  test_context_mapping.sh  test_crash_recovery.sh  test_cross_validation.sh  test_discovery.py  test_distributions.py  test_docker.py  test_enhanced_architecture.sh  test_enhanced_git_change_detection.sh  test_enhanced_safe_reboot.sh  test_example_workers.py  test_exception_handling.py  test_executor.py  test_file_discovery.sh  test_file_operations.py  test_formatting.py  test_framework.sh  (+80 more)
tests/number_tracking/: README.md  test_basic_assignment.sh  test_concurrent_assignment.sh  test_context_tracking.sh  test_init_existing.sh  test_init_fresh.sh  test_locking_mechanism.sh  test_recovery_mechanism.sh  test_state_validation.sh  test_suite_runner.sh
(+2391 files in other folders)
