[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-slopp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "coverage>=7.8.0",
    "flake8>=7.2.0",
    "flake8-black>=0.4.0",
    "flake8-pyproject>=1.2.3",
    "flake8-quotes>=3.4.0",
    "flake8-return>=1.2.0",
    "flake8-annotations-complexity>=0.1.0",
    "flake8-bandit>=4.1.1",
    "flake8-bugbear>=25.0.0",
    "flake8-builtins>=3.0.0",
    "flake8-comprehensions>=3.15.0",
    "flake8-eradicate>=1.5.0",
    "flake8-expression-complexity>=0.0.11",
    "flake8-pytest-style>=2.1.0",
    "pep8-naming>=0.15.1",
    "flake8-eol>=0.0.8",
    "flake8-exceptions>=0.0.1a0",
    "flake8-simplify>=0.30.0",
    "flake8-wot>=0.2.0",
    "flake8-function-order>=0.0.5",
    "flake8-tidy-imports>=4.10.0",
    "black>=25.1.0",
    "isort>=7.0.0",
    "safety>=2.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["auto_slopp"]

[project.scripts]
auto-slopp = "auto_slopp.main:main"

[tool.black]
line-length = 120
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 120
max-complexity = 8
extend-ignore = ["E203", "W503", "D100", "D107"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    ".tox",
]
docstring-convention = "google"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance benchmarks",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pre-commit>=3.6.0",
]
