[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-slopp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "urllib3>=2.6.3",
    "fastmcp>=2.13.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "coverage>=7.8.0",
    "flake8>=7.2.0",
    "flake8-black>=0.4.0",
    "flake8-pyproject>=1.2.3",
    "flake8-quotes>=3.4.0",
    "flake8-bandit>=4.1.1",
    "flake8-bugbear>=25.0.0",
    "flake8-builtins>=3.0.0",
    "flake8-comprehensions>=3.15.0",
    "flake8-eradicate>=1.5.0",
    "flake8-pytest-style>=2.1.0",
    "pep8-naming>=0.15.1",
    "flake8-eol>=0.0.8",
    "flake8-exceptions>=0.0.1a0",
    "flake8-simplify>=0.30.0",
    "flake8-wot>=0.2.0",
    "flake8-tidy-imports>=4.10.0",
    "black>=25.1.0",
    "isort>=7.0.0",
    "safety>=2.3.0",
    "bandit>=1.7.0",
    "pre-commit>=3.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/auto_slopp"]

[project.scripts]
auto-slopp = "auto_slopp.main:main"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | openapi_client
  )/
)
'''

[tool.flake8]
exclude= ["src/assistant/models", ".eggs", ".git", ".hg", ".mypy_cache", ".tox", ".venv", ".devcontainer", "venv", "_build", "buck-out", "build", "dist", "**/__init__.py"]
statistics = true
show-source = false
max-complexity = 8
max-annotations-complexity = 3
docstring-convention = 'numpy'
max-line-length = 120
extend-ignore = [
    "E203",
    "W503",
    "Q000",
    "WOT001",
    "SIM117",
    "S101",
    "S105",
    "S106",
    "S108",
    "S110",
    "S403",
    "S404",
    "S405",
    "S603",
    "S605",
    "S607",
    "S608",
    "S609",
    "C901",
    "E501",
    "F811",
    "F841",
    "B007",
    "D104",
    "D406",
    "D407",
    "D202",
    "D401",
    "I100",
    "I201",
]
ban-relative-imports = true
per-file-ignores = """
  ./tests/*: S101,I252
"""

[tool.isort]
profile = "black"
skip = ['.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox', '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv', 'openapi_client']
skip_gitignore = true
known_local_folder = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance benchmarks",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
