[metadata]
name = my_test_package
version = 0.1.0
description = My test package
author = Test Author
author_email = test@example.com

[options]
packages = find:
python_requires = >=3.8

[console_scripts]
isort = isort.main:main
isort-identify-imports = isort.main:identify_imports_main

[distutils.commands]
isort = isort.setuptools_commands:ISortCommand
