[project]
name = "auto-slopp"
version = "0.1.0"
description = "Automated repository management and cleanup system converted from bash to Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.1",
    "python-telegram-bot>=20.7",
    "requests>=2.31.0",
    "gitpython>=3.1.40",
    "psutil>=5.9.6",
    "schedule>=1.2.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.5.2",
    "asyncio-mqtt>=0.16.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "coverage>=7.8.0",
    "black>=25.1.0",
    "isort>=7.0.0",
    "flake8>=7.2.0",
    "flake8-black>=0.4.0",
    "flake8-pyproject>=1.2.3",
    "flake8-quotes>=3.4.0",
    "flake8-return>=1.2.0",
    "flake8-annotations-complexity>=0.1.0",
    "flake8-bandit>=4.1.1",
    "flake8-bugbear>=25.0.0",
    "flake8-builtins>=3.0.0",
    "flake8-comprehensions>=3.15.0",
    "flake8-eradicate>=1.5.0",
    "flake8-expression-complexity>=0.0.11",
    "flake8-pytest-style>=2.1.0",
    "pep8-naming>=0.15.1",
    "flake8-eol>=0.0.8",
    "flake8-exceptions>=0.0.1a0",
    "flake8-simplify>=0.30.0",
    "flake8-wot>=0.2.0",
    "flake8-function-order>=0.0.5",
    "flake8-tidy-imports>=4.10.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
auto-slopp = "auto_slopp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["auto_slopp"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".tox",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config --cov=auto_slopp --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["auto_slopp"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "flake8>=7.3.0",
    "pytest>=9.0.2",
]
